tests/k8s_ingress_test_new/diff_output_from_k8s_ingress_test.txt
Connectivity diff:
diff-type: changed, source: default/reviews-v1-545db77b95[ReplicaSet], destination: default/productpage-v1-6b746f74dc[ReplicaSet], dir1:  All Connections, dir2: TCP 9080, workloads-diff-info: 
diff-type: changed, source: default/reviews-v1-545db77b95[ReplicaSet], destination: default/ratings-v1-b6994bb9[ReplicaSet], dir1:  All Connections, dir2: TCP 9080, workloads-diff-info: 
diff-type: changed, source: default/reviews-v2-7bf8c9648f[ReplicaSet], destination: default/productpage-v1-6b746f74dc[ReplicaSet], dir1:  All Connections, dir2: TCP 9080, workloads-diff-info: 
diff-type: changed, source: default/reviews-v2-7bf8c9648f[ReplicaSet], destination: default/ratings-v1-b6994bb9[ReplicaSet], dir1:  All Connections, dir2: TCP 9080, workloads-diff-info: 
diff-type: changed, source: default/reviews-v3-84779c7bbc[ReplicaSet], destination: default/productpage-v1-6b746f74dc[ReplicaSet], dir1:  All Connections, dir2: TCP 9080, workloads-diff-info: 
diff-type: changed, source: default/reviews-v3-84779c7bbc[ReplicaSet], destination: default/ratings-v1-b6994bb9[ReplicaSet], dir1:  All Connections, dir2: TCP 9080, workloads-diff-info: 
diff-type: added, source: 0.0.0.0-255.255.255.255, destination: default/unicorn[Deployment], dir1:  No Connections, dir2: All Connections, workloads-diff-info: added default/unicorn[Deployment]
diff-type: added, source: default/unicorn[Deployment], destination: 0.0.0.0-255.255.255.255, dir1:  No Connections, dir2: All Connections, workloads-diff-info: added default/unicorn[Deployment]
diff-type: added, source: default/unicorn[Deployment], destination: default/details-v1-79f774bdb9[ReplicaSet], dir1:  No Connections, dir2: TCP 9080, workloads-diff-info: added default/unicorn[Deployment]
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/details-v1-79f774bdb9[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/productpage-v1-6b746f74dc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/ratings-v1-b6994bb9[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/reviews-v1-545db77b95[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/reviews-v2-7bf8c9648f[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: 0.0.0.0-255.255.255.255, destination: default/reviews-v3-84779c7bbc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/details-v1-79f774bdb9[ReplicaSet], destination: 0.0.0.0-255.255.255.255, dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/details-v1-79f774bdb9[ReplicaSet], destination: default/productpage-v1-6b746f74dc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/details-v1-79f774bdb9[ReplicaSet], destination: default/ratings-v1-b6994bb9[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/details-v1-79f774bdb9[ReplicaSet], destination: default/reviews-v1-545db77b95[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/details-v1-79f774bdb9[ReplicaSet], destination: default/reviews-v2-7bf8c9648f[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/details-v1-79f774bdb9[ReplicaSet], destination: default/reviews-v3-84779c7bbc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/productpage-v1-6b746f74dc[ReplicaSet], destination: 0.0.0.0-255.255.255.255, dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/productpage-v1-6b746f74dc[ReplicaSet], destination: default/details-v1-79f774bdb9[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/productpage-v1-6b746f74dc[ReplicaSet], destination: default/ratings-v1-b6994bb9[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/productpage-v1-6b746f74dc[ReplicaSet], destination: default/reviews-v1-545db77b95[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/productpage-v1-6b746f74dc[ReplicaSet], destination: default/reviews-v2-7bf8c9648f[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/productpage-v1-6b746f74dc[ReplicaSet], destination: default/reviews-v3-84779c7bbc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/ratings-v1-b6994bb9[ReplicaSet], destination: 0.0.0.0-255.255.255.255, dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/ratings-v1-b6994bb9[ReplicaSet], destination: default/details-v1-79f774bdb9[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/ratings-v1-b6994bb9[ReplicaSet], destination: default/productpage-v1-6b746f74dc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/ratings-v1-b6994bb9[ReplicaSet], destination: default/reviews-v1-545db77b95[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/ratings-v1-b6994bb9[ReplicaSet], destination: default/reviews-v2-7bf8c9648f[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/ratings-v1-b6994bb9[ReplicaSet], destination: default/reviews-v3-84779c7bbc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v1-545db77b95[ReplicaSet], destination: 0.0.0.0-255.255.255.255, dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v1-545db77b95[ReplicaSet], destination: default/details-v1-79f774bdb9[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v1-545db77b95[ReplicaSet], destination: default/reviews-v2-7bf8c9648f[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v1-545db77b95[ReplicaSet], destination: default/reviews-v3-84779c7bbc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v2-7bf8c9648f[ReplicaSet], destination: 0.0.0.0-255.255.255.255, dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v2-7bf8c9648f[ReplicaSet], destination: default/details-v1-79f774bdb9[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v2-7bf8c9648f[ReplicaSet], destination: default/reviews-v1-545db77b95[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v2-7bf8c9648f[ReplicaSet], destination: default/reviews-v3-84779c7bbc[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v3-84779c7bbc[ReplicaSet], destination: 0.0.0.0-255.255.255.255, dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v3-84779c7bbc[ReplicaSet], destination: default/details-v1-79f774bdb9[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v3-84779c7bbc[ReplicaSet], destination: default/reviews-v1-545db77b95[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: removed, source: default/reviews-v3-84779c7bbc[ReplicaSet], destination: default/reviews-v2-7bf8c9648f[ReplicaSet], dir1:  All Connections, dir2: No Connections, workloads-diff-info: 
diff-type: added, source: {ingress-controller}, destination: default/unicorn[Deployment], dir1:  No Connections, dir2: TCP 8080, workloads-diff-info: added default/unicorn[Deployment]
