tests/k8s_ingress_test_new/new_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unicorn
spec:
  selector:
    matchLabels:
      app: unicorn
  template:
    metadata:
      labels:
        app: unicorn
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/unicorn:v0.1.3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: unicorn
spec:
  type: ClusterIP
  selector:
    app: unicorn
  ports:
  - name: grpc
    port: 5000
    targetPort: 8080
---
