tests/k8s_ingress_test_new/connlist_output.txt
0.0.0.0-255.255.255.255 => default/unicorn[Deployment] : All Connections
default/reviews-v1-545db77b95[ReplicaSet] => default/productpage-v1-6b746f74dc[ReplicaSet] : TCP 9080
default/reviews-v1-545db77b95[ReplicaSet] => default/ratings-v1-b6994bb9[ReplicaSet] : TCP 9080
default/reviews-v2-7bf8c9648f[ReplicaSet] => default/productpage-v1-6b746f74dc[ReplicaSet] : TCP 9080
default/reviews-v2-7bf8c9648f[ReplicaSet] => default/ratings-v1-b6994bb9[ReplicaSet] : TCP 9080
default/reviews-v3-84779c7bbc[ReplicaSet] => default/productpage-v1-6b746f74dc[ReplicaSet] : TCP 9080
default/reviews-v3-84779c7bbc[ReplicaSet] => default/ratings-v1-b6994bb9[ReplicaSet] : TCP 9080
default/unicorn[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
default/unicorn[Deployment] => default/details-v1-79f774bdb9[ReplicaSet] : TCP 9080
{ingress-controller} => default/details-v1-79f774bdb9[ReplicaSet] : TCP 9080
{ingress-controller} => default/unicorn[Deployment] : TCP 8080
